[package]
name = "arrow_display"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.0"
ili9341 = "0.5.0"
embedded-hal = "0.2.7"
cortex-m-rtic = "1.0.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt-rtt = "0.4.0"
display-interface-spi = "0.4.0"
defmt = "0.3"
panic-semihosting = "0.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32l4xx-hal = { version = "0.7.1", features = [ "stm32l451", "rt"] }

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"
